--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,7 @@
 	--max-page-width: 1200px;
 
 	// make sure these match the values in variables.scss
+	--dialog-max-width: 496px;
 	--small-breakpoint: 650px;
 	--medium-breakpoint: 850px;
 
