--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,5 @@
 // make sure these match the values in styles.scss
 $small-breakpoint: 650px;
 $medium-breakpoint: 850px;
+
+$dialog-max-width: 496px;
